modules/sg/main.tf
#create Security group with inbound and outbound rules
resource "aws_security_group" "t_sg" {
  name        = var.sg
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = var.vpc_input
  tags = {
    Name = var.sg_tag
  }
  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
